--- a/F030C8Tx_LoRaWAN/F030_LoRaWAN.ioc
+++ b/F030C8Tx_LoRaWAN/F030_LoRaWAN.ioc
@@ -113,7 +113,7 @@ RCC.APB1TimFreq_Value=32000000
 RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=32000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=32000000
 RCC.PLLCLKFreq_Value=32000000
 RCC.PLLMCOFreq_Value=16000000
@@ -123,15 +123,17 @@ RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=32000000
 RCC.USART1Freq_Value=32000000
+RCC.VCOOutput2Freq_Value=4000000
 RTC.Alarm-Alarm\ A=RTC_ALARM_A
 RTC.AsynchPrediv=3
 RTC.Format=RTC_FORMAT_BIN
 RTC.IPParameters=Alarm-Alarm A,AsynchPrediv,SynchPrediv,Format
 RTC.SynchPrediv=3
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 USART1.BaudRate=115200
